# linux_cmake_vscode

./: .gitignore  CMakeLists.txt  README.md  config.h.in  main_launch.cpp  main_launch.hpp  vcpkg-configuration.json
modules/: FindTBB.cmake
